# xspy

./: CMakeLists.txt  ReadMe.md  ReadMe.txt  xspy0.4.2.7z
xspy/: AboutDlg.h  MainDlg.cpp  MainDlg.h  common.h  resource.h  stdafx.cpp  stdafx.h  ui_capture.h  ui_capture_impl.h  utils.cpp  utils.h  xspy.cpp  xspy.rc  xspy.vcproj
xspydll/: atl.cpp  atl.h  common.cpp  common.h  dllmain.cpp  mfc.cpp  mfc.h  mfc_class.h  mfc_msg.h  stdafx.cpp  stdafx.h  targetver.h  xspydll.cpp  xspydll.h  xspydll.vcproj
